[gd_scene load_steps=17 format=2]

[ext_resource path="res://bullet/bullet.gd" type="Script" id=1]
[ext_resource path="res://art/bullet/harpoon/fly_1.png" type="Texture" id=2]
[ext_resource path="res://art/bullet/tranq/fly_1.png" type="Texture" id=3]
[ext_resource path="res://art/bullet/tranq/fly_2.png" type="Texture" id=4]
[ext_resource path="res://art/bullet/tranq/fly_4.png" type="Texture" id=5]
[ext_resource path="res://art/bullet/tranq/fly_3.png" type="Texture" id=6]
[ext_resource path="res://art/bullet/ultrasonic/fly_1.png" type="Texture" id=7]
[ext_resource path="res://art/bullet/ultrasonic/fly_2.png" type="Texture" id=8]
[ext_resource path="res://art/bullet/ultrasonic/fly_7.png" type="Texture" id=9]
[ext_resource path="res://art/bullet/ultrasonic/fly_4.png" type="Texture" id=10]
[ext_resource path="res://art/bullet/ultrasonic/fly_5.png" type="Texture" id=11]
[ext_resource path="res://art/bullet/ultrasonic/fly_3.png" type="Texture" id=12]
[ext_resource path="res://art/bullet/ultrasonic/fly_6.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 9 ) ],
"loop": false,
"name": "ultrasonic_fly",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "harpoon_fly",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "tranq_fly",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.92016
height = 44.5051

[sub_resource type="Animation" id=3]
resource_name = "collide"
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="bullet" type="Area2D"]
script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "ultrasonic_fly"
frame = 6
playing = true

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 4.07593, -0.40258 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/collide = SubResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="animation_finished" from="sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
